Added edit scene functionality. After a long click on the list group or child a popup will prompt user to edit existing text for scene. The new data is then saved to the database . Additionally, the previous method in the MainActivity used to generate a popup for group (header) creation has been converted to work for any text editing popup requirement for the purposes of this application.